# flask-integration-test-poc

./: .gitignore  README.md  pyproject.toml
app/: config.py  create_app.py  manage.py  resources.py  schemas.py
app/database/: models.py
tests/: conftest.py  integration_test.py
